--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     background-color: #ECF2FF;
 }
 #projectsection{
-    background-color: #C4B0FF;
+    background-color: #F2F2F2;
 }
 #contactme{
     background-color: #ECF2FF;
